# arklsp

./: .gitignore  CMakeLists.txt  README.md
include/: server.hpp
src/: Diagnostic.cpp  Diagnostic.cppm  Server.cpp  Server.cppm  json.cppm  main.cpp  server.cpp
tests/: main.ark
